examples/ratelimit/envoy-native.yaml
static_resources:
  listeners:
    - name: ratelimit
      address:
        socket_address: { address: 127.0.0.1, port_value: 10000 }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ratelimit
                http_filters:
                  - name: envoy.filters.http.ratelimit
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.ratelimit.v3.RateLimit
                      domain: orange
                      failure_mode_deny: true
                      timeout: 0.05s
                      rate_limit_service:
                        grpc_service:
                          envoy_grpc: { cluster_name: rls-service }
                        transport_api_version: V3
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                route_config:
                  name: ratelimit
                  virtual_hosts:
                    - name: local
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/" }
                          route:
                            cluster: upstream
                            rate_limits:
                              - actions:
                                  - request_headers:
                                      header_name: x-tars-id
                                      descriptor_key: key_id
                                      skip_if_absent: false
                                  - generic_key:
                                      descriptor_key: dim
                                      descriptor_value: rpm

  clusters:
    - name: upstream
      connect_timeout: 1s
      type: STATIC
      load_assignment:
        cluster_name: upstream
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: { address: 127.0.0.1, port_value: 10001 }

    - name: rls-service
      connect_timeout: 1s
      type: STATIC
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http2_protocol_options: {}
      load_assignment:
        cluster_name: rls-service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: { address: 127.0.0.1, port_value: 10002 }

admin:
  address:
    socket_address: { address: 127.0.0.1, port_value: 9901 }
